Fix display on IE/Edge

--- a/src/css/style.less
+++ b/src/css/style.less
@@ -2,7 +2,10 @@
 
 body { margin: 0 20px; }
 
-main { clear: both; }
+main { 
+  clear: both;
+  display: block;
+}
 
 nav {
 	ul {
